--- a/urls4irl/templates/home.html
+++ b/urls4irl/templates/home.html
@@ -22,6 +22,7 @@
         {% if single_utub.created_by.id == current_user.id %}
             <div class="d-flex justify-content-center flex-row">
                 <form action="{{url_for('delete_utub', utub_id=single_utub.id, owner_id=single_utub.created_by.id)}}" method="post">
+                    <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                     <button class="btn btn-danger btn-sm mb-3 mx-3" href="">Delete this UTub</button>
                 </form>
             </div>
@@ -37,12 +38,14 @@
                 {% if single_utub.created_by.id == current_user.id and user.id != single_utub.created_by.id %}
                     <div class="d-flex justify-content-center flex-row">
                         <form action="{{url_for('delete_user', utub_id=single_utub.id, user_id=user.id)}}" method="post">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                             <button class="btn btn-danger btn-sm mb-3 mx-3" href="">Delete this User</button>
                         </form>
                     </div>
                 {% elif user.id == current_user.id and single_utub.created_by.id != current_user.id %}
                     <div class="d-flex justify-content-center flex-row">
                         <form action="{{url_for('delete_user', utub_id=single_utub.id, user_id=user.id)}}" method="post">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                             <button class="btn btn-danger btn-sm mb-3 mx-3" href="">Leave Utub</button>
                         </form>
                     </div>
@@ -67,6 +70,7 @@
                                         <div class="d-flex justify-content-center">
                                                 <small class="text-muted">
                                                     <form action="{{url_for('remove_tag', utub_id=single_utub.id, url_id=link.url_id, tag_id=tag.tag_id)}}" method="post">
+                                                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                                                         <button class="btn btn-link btn-sm" href="">Delete tag</button>
                                                     </form>
                                                 </small>
@@ -79,6 +83,7 @@
                         <div class="d-flex justify-content-center flex-row">
                             <a class="btn btn-info btn-sm col-6 mb-3 mx-3" href="{{url_for('add_tag', utub_id=single_utub.id, url_id=link.url_id)}}">Add tags</a>
                             <form action="{{url_for('delete_url', utub_id=single_utub.id, url_id=link.url_id)}}" method="post">
+                                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
                                 <button class="btn btn-danger btn-sm col-6 mb-3" href="">Delete this URL</button>
                             </form>
                         </div>
