--- a/src/templates/head.html
+++ b/src/templates/head.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 {% block scripts_for_login %}
 {% if current_user.is_authenticated and current_user.email_confirm.is_validated %}
-<meta http-equiv="refresh" content="{{ CONSTANTS.CONFIG.CSRF_EXPIRATION_SECONDS }}">
+<meta http-equiv="refresh" content="{{ CONSTANTS.CONFIG.SESSION_LIFETIME }}">
 <meta name="csrf-token" content="{{ csrf_token() }}">
 {% endif %}
 {% endblock %}
