--- a/src/templates/_strings.html
+++ b/src/templates/_strings.html
@@ -4,18 +4,36 @@ class Strings {
 
 			// Query Param Strings
 			this.UTUB_QUERY_PARAM = "{{CONSTANTS.STRINGS.UTUB_QUERY_PARAM}}";
+
+			// Splash strings
 			this.VALIDATE_MY_EMAIL = "{{CONSTANTS.STRINGS.VALIDATE_MY_EMAIL}}";
 			this.VALIDATE_YOUR_EMAIL = "{{CONSTANTS.STRINGS.VALIDATE_YOUR_EMAIL}}";
+			this.FORGOT_YOUR_PASSWORD = "{{CONSTANTS.STRINGS.FORGOT_YOUR_PASSWORD}}"
+			this.LOGIN_TITLE = "{{CONSTANTS.STRINGS.LOGIN_TITLE}}"
+
+			// General Strings
+			this.MAY_HAVE_ALREADY_BEEN_DELETED = "{{CONSTANTS.STRINGS.MAY_HAVE_ALREADY_BEEN_DELETED}}"
+
+			// UTub Strings
 			this.UTUB_CREATE_SAME_NAME = "{{CONSTANTS.STRINGS.UTUB_CREATE_SAME_NAME}}"
 			this.UTUB_UPDATE_SAME_NAME = "{{CONSTANTS.STRINGS.UTUB_UPDATE_SAME_NAME}}"
 			this.UTUB_DELETE_WARNING = "{{CONSTANTS.STRINGS.UTUB_DELETE_WARNING}}"
 			this.UTUB_CREATE_MSG = "{{CONSTANTS.STRINGS.UTUB_CREATE_MSG}}"
+			this.UTUB_SELECT = "{{CONSTANTS.STRINGS.UTUB_SELECT}}"
+
+			// Member Strings
 			this.MEMBER_DELETE_WARNING = "{{CONSTANTS.STRINGS.MEMBER_DELETE_WARNING}}"
 			this.MEMBER_LEAVE_WARNING = "{{CONSTANTS.STRINGS.MEMBER_LEAVE_WARNING}}"
+
+			// URL Strings
 			this.DELETE_URL_WARNING = "{{CONSTANTS.STRINGS.DELETE_URL_WARNING}}"
-			this.UTUB_SELECT = "{{CONSTANTS.STRINGS.UTUB_SELECT}}"
-			this.FORGOT_YOUR_PASSWORD = "{{CONSTANTS.STRINGS.FORGOT_YOUR_PASSWORD}}"
-			this.LOGIN_TITLE = "{{CONSTANTS.STRINGS.LOGIN_TITLE}}"
+			this.INVALID_URL = "{{CONSTANTS.STRINGS.UNABLE_TO_VALIDATE_THIS_URL}}"
+			this.ACCESS_URL_WARNING = "{{CONSTANTS.STRINGS.ACCESS_URL_WARNING}}"
+
+			// Tag Strings
+			this.UTUB_TAG_DELETE_WARNING = "{{CONSTANTS.STRINGS.UTUB_TAG_DELETE_WARNING | safe}}"
+
+			// Tooltips
 			this.COPY_URL_TOOLTIP = "{{CONSTANTS.STRINGS.COPY_URL_TOOLTIP}}"
 			this.COPIED_URL_TOOLTIP = "{{CONSTANTS.STRINGS.COPIED_URL_TOOLTIP}}"
 			this.COPIED_URL_FAILURE_TOOLIP = "{{CONSTANTS.STRINGS.COPIED_URL_FAILURE_TOOLIP}}"
@@ -23,8 +41,7 @@ class Strings {
 			this.ADD_URL_TAG_TOOLTIP = "{{CONSTANTS.STRINGS.ADD_URL_TAG_TOOLTIP}}"
 			this.EDIT_URL_TOOLTIP = "{{CONSTANTS.STRINGS.EDIT_URL_TOOLTIP}}"
 			this.DELETE_URL_TOOLTIP = "{{CONSTANTS.STRINGS.DELETE_URL_TOOLTIP}}"
-			this.INVALID_URL = "{{CONSTANTS.STRINGS.UNABLE_TO_VALIDATE_THIS_URL}}"
-			this.ACCESS_URL_WARNING = "{{CONSTANTS.STRINGS.ACCESS_URL_WARNING}}"
+
 			Strings.instance = this;
 		}
 
